Reorder logs index

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -32,12 +32,20 @@ textarea {
 	float: right;
 }
 
+.float-left {
+	float: left;
+}
+
 .top-pad {
 	margin-top: 35px;
 }
 
 .top-pad-10 {
 	margin-top: 10px;
+}
+
+.top-pad50 {
+	margin-top: 50px;
 }
 
 /* Typography */
