--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,12 @@
 				<ul class="nav navbar-nav pull-right">
 					<% if user_signed_in? %>
 						<li><%= link_to "Cases", root_path %></li>
-						<li><%= link_to "Dashboard", user_path(current_user) %></li>
+						<li>
+							<%= link_to "Dashboard", user_path(current_user), class: "float-left" %>
+							<% if @followup_count > 0 %>
+								<div class="alert-badge"><%= @followup_count %></div>
+							<% end %>
+						</li>
 						<li><%= link_to "Customers", customers_path %></li>
 						<li><%= link_to "Tags", tags_path %></li>
 						<li><%= link_to "My Account", edit_user_registration_path %></li>
