--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,18 @@
   </script>
 </head>
 <body>
-<%= render 'layouts/header' %>
+  <%= render 'layouts/header' %>
 	<div class="container-fluid">
 		<%= yield %>
-	</div>
+    <br /><br />
+    <div class="row">
+      <%= render 'layouts/footer' %>
+    </div>
+  </div>
+	
+
 	<br />
+  <br />
 <%= debug(params) if Rails.env.development? %>
 </body>
 </html>
