log index formatting changes

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -169,10 +169,11 @@
 
 #directory {
 	font-size: 0.95em;
-} ul {
+ ul {
 	list-style:none;
 	margin-left: -30px;
 	}
+}
 
 #kidcheck-info {
 	text-align: center;
