Fix show stopper bug

--- a/app/assets/javascripts/logs.js.coffee.erb
+++ b/app/assets/javascripts/logs.js.coffee.erb
@@ -3,7 +3,7 @@
 # You can use CoffeeScript in this file: http://coffeescript.org/
 
 jQuery ->
-	$('.tooltip').tooltipster
+	$('.tooltipster').tooltipster
 		theme: 'tooltipster-punk'
 	$('#log_tag_ids').chosen()
 	$('#log_customer_id').chosen()
