add followups table formatting

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -4,6 +4,27 @@
 	color: #999;
 }
 
+.due-past {
+	color: #DE262F;
+}
+
+.glyph-orange {
+	color: #FFBA26;
+}
+
+.glyph-red {
+	color: #FF0000;
+}
+
+.glyph-green {
+	color: #69D170;
+}
+
+.glyph-lg {
+	font-size: 1.3em;
+	padding-top: 3px;
+}
+
 /* Pricing Widget */
 
 #pricing {
