--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,5 +12,7 @@
 <br />
 
 <div class="row">
-	<%= render 'users/partials/dashboard_widgets' %>
+	<div class="col-md-10 col-md-offset-1">
+		<%= render 'users/partials/dashboard_widgets' %>
+	</div>
 </div>
