--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -156,6 +156,7 @@ input, textarea, select, .uneditable-input {
 	background-color: #FFF154;
 	border: 1px dashed #858585;
 	border-radius: 4px;
+	width: 21px;
 	padding: 3px 5px;
 	cursor: default;
 	z-index: 1;
