--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,6 +67,17 @@ h1 {
 	clear: both;
 }
 
+h3 {
+	text-align: center;
+	font-family: 'Lato', sans-serif;
+	font-weight: 400;
+	clear: both;
+}
+
+.grey {
+  color: $grayLight;
+}
+
 /* Header */
 
 .container { height: 5em; }
@@ -144,6 +155,12 @@ input, textarea, select, .uneditable-input {
 	margin-bottom: 40px;
 	display: block;
 	clear: both;
+}
+
+/* Tables */
+
+.table .highlight {
+	background-color: #FCFFDE;
 }
 
 /* Set Date for logs/index */
