--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,16 @@
 								<div class="alert-badge"><%= @followup_count %></div>
 							<% end %>
 						</li>
+						<li id="fat-menu" class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+	                		  Metrics <b class="caret"></b>
+	              			</a>
+	              			<ul class="dropdown-menu">
+	                			<li><%= link_to "Weekdays", metrics_weekdays_path %></li>
+	                			<li><%= link_to "Sundays", metrics_sundays_path %></li>
+				                <li><%= link_to "Monthly", metrics_monthly_path %></li>
+				            </ul>
+			            </li>
 						<li><%= link_to "Customers", customers_path %></li>
 						<li><%= link_to "Tags", tags_path %></li>
 						<li><%= link_to "My Account", edit_user_registration_path %></li>
