Add online scheduling links to dashboard

--- a/app/views/users/partials/_dashboard_widgets.html.erb
+++ b/app/views/users/partials/_dashboard_widgets.html.erb
@@ -60,12 +60,14 @@
 </div>
 
 <div id="infusionsoft" class="module blue">
-	<h3>InfusionSoft Appt</h3>
-		<ol>
-			<li>Find the individual</li>
-			<li>Fill out KidCheck Fields (time, date, save)</li>
-			<li>Select Follow-up Sequence (and save)</li>
-		</ol>
+	<h3>Scheduling</h3>
+	<ol>
+		<li>Find the individual</li>
+		<li>Fill out KidCheck Fields (time, date, save)</li>
+		<li>Select Follow-up Sequence (and save)</li>
+	</ol>
+	<p><a href="http://kidcheck.fullslate.com/services/1" target="_blank"><strong>Online Scheduling: Demo</strong></a></p>
+	<p><a href="http://kidcheck.fullslate.com/services/124" target="_blank"><strong>Online Scheduling: Training</strong></a></p>
 </div>
 
 <div id="windows81" class="module blue double-width">
