--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -70,8 +70,9 @@ h1 {
 h3 {
 	text-align: center;
 	font-family: 'Lato', sans-serif;
-	font-weight: 400;
+	font-weight: 300;
 	clear: both;
+	color: $grayLight;
 }
 
 .grey {
