--- a/app/assets/stylesheets/metrics.css.scss
+++ b/app/assets/stylesheets/metrics.css.scss
@@ -1,5 +1,7 @@
 @import "variables";
 
+// ======= Sunday =======
+
 .metrics-sunday {
 	margin-top: 30px;
 	font-family: 'Lato', sans-serif;
@@ -24,6 +26,18 @@
 		border-left: 1px solid $lt-gray;
 	}
 }
+
+.sunday-monthlies {
+	margin: 30px;
+	list-style: none;
+	font-family: 'Lato', sans-serif;
+	font-weight: 500;
+	font-size: 16px;
+	text-align: right;
+
+}
+
+// ======= Monthly =======
 
 .metrics-month {
 	margin: 30px auto;
