--- a/app/views/metrics/sundays.html.erb
+++ b/app/views/metrics/sundays.html.erb
@@ -47,7 +47,7 @@
 	<thead>
 		<tr>
 			<th>Date</th>
-			<th>6:00<br />to<br />6:30</th>
+			<th class="col-line-left">6:00<br />to<br />6:30</th>
 			<th>6:30<br />to<br />7:00</th>
 			<th>7:00<br />to<br />7:30</th>
 			<th>7:30<br />to<br />8:00</th>
@@ -62,6 +62,7 @@
 			<th>After<br />12</th>
 			<th class="highlight col-line-left">Total<br />Cases</th>
 			<th class="highlight">Total<br />Minutes</th>
+			<th class="highlight">Missed<br />Calls</th>
 		</tr>
 	</thead>
 
@@ -69,7 +70,7 @@
 		<% @sundays.each do |sunday| %>
 		<tr>
 			<td class="emphasis"><%= sunday.to_date.strftime("%b %d") %></td>
-			<td><%= time_range_case_count(sunday, "06:00:00", "06:29:59") %></td>
+			<td class="col-line-left"><%= time_range_case_count(sunday, "06:00:00", "06:29:59") %></td>
 			<td><%= time_range_case_count(sunday, "06:30:00", "06:59:59") %></td>
 			<td><%= time_range_case_count(sunday, "07:00:00", "07:29:59") %></td>
 			<td><%= time_range_case_count(sunday, "07:30:00", "07:59:59") %></td>
@@ -84,6 +85,7 @@
 			<td><%= time_range_case_count(sunday, "12:00:00", "23:59:59") %></td>
 			<td class="col-line-left emphasis"><%= get_case_count(sunday) %></td>
 			<td class="emphasis"><%= get_minutes_count(sunday) %></td>
+			<td class="emphasis"><%= get_missed_case_count(sunday) %></td>
 		</tr>
 		<% end %>
 <!-- 		<tr class="highlight">
@@ -127,6 +129,14 @@
 		<% end %> -->
 	</tbody>
 </table>
+
+<ul class="sunday-monthlies">
+	<li>Total cases: </li>
+	<li>Cases per Sunday: </li>
+	<li>Total minutes: </li>
+	<li>Minutes per case: </li>
+	<li>Missed calls per Sunday: </li>
+</ul>
 
 </div>
 </div>
