--- a/app/assets/stylesheets/metrics.css.scss
+++ b/app/assets/stylesheets/metrics.css.scss
@@ -29,11 +29,23 @@
 
 .sunday-monthlies {
 	margin: 30px;
+	padding: 30px;
 	list-style: none;
 	font-family: 'Lato', sans-serif;
 	font-weight: 500;
 	font-size: 16px;
 	text-align: right;
+	color: $gray;
+	background-color: #FEFFE3;
+	display: inline-block;
+	float: right;
+	border: 1px dotted $gray;
+	border-radius: 5px;
+	span {
+		padding-left: 8px;
+		font-size: 22px;
+		color: black;
+	}
 
 }
 
