highlight missed call case type

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -248,6 +248,12 @@ input, textarea, select, .uneditable-input {
 	z-index: 1;
 }
 
+.highlight-missed-call {
+	background-color: #A3FFFD;
+	border-radius: 2px;
+	padding: 3px;
+}
+
 .tooltipster {
 	opacity: 1;
 }
