fix missed call highlight

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -249,7 +249,7 @@ input, textarea, select, .uneditable-input {
 }
 
 .highlight-missed-call {
-	background-color: #A3FFFD;
+	background-color: #A3FFFD !important;
 	border-radius: 2px;
 	padding: 3px;
 }
