--- a/app/assets/stylesheets/metrics.css.scss
+++ b/app/assets/stylesheets/metrics.css.scss
@@ -58,13 +58,27 @@
 		text-align: center;
 		width: 175px;
 		padding: 10px 0;
-
+	}
+	.totals-col-header {
+		color: $gray;
+		font-weight: 300;
 	}
 	td {
 		height: 110px;
 		border: 1px solid #CCC;
 		border-radius: 3px;
 		text-align: top;
+	}
+	.totals-col {
+		border: none;
+		text-align: center;
+		font-size: 30px;
+		color: $gray;
+		font-weight: 300;
+		line-height: .8;
+		span {
+			font-size:16px;
+		}
 	}
 
 	.mm-datebox {
