--- a/app/views/metrics/monthly.html.erb
+++ b/app/views/metrics/monthly.html.erb
@@ -79,7 +79,7 @@
 				<td class="totals-col">
 					<%= get_case_count_sum(@week1[1], @week1[2], @week1[3], @week1[4], @week1[5]) %>
 					<br />
-					<span>(<%= get_minutes_count_sum(@week1[1], @week1[2], @week1[3], @week1[4], @week1[5]) %> min)</span>
+					<span>(<%= (get_minutes_count_sum(@week1[1], @week1[2], @week1[3], @week1[4], @week1[5])) / 60.0 %> hrs)</span>
 				</td>
 			</tr>
 
@@ -106,7 +106,7 @@
 				<% end %>
 				<td class="totals-col"><%= get_case_count_sum(@week2[1], @week2[2], @week2[3], @week2[4], @week2[5]) %>
 					<br />
-					<span>(<%= get_minutes_count_sum(@week2[1], @week2[2], @week2[3], @week2[4], @week2[5]) %> min)</span>
+					<span>(<%= (get_minutes_count_sum(@week2[1], @week2[2], @week2[3], @week2[4], @week2[5])) / 60.0 %> hrs)</span>
 				</td>
 			</tr>
 
@@ -133,7 +133,7 @@
 				<% end %>
 				<td class="totals-col"><%= get_case_count_sum(@week3[1], @week3[2], @week3[3], @week3[4], @week3[5]) %>
 					<br />
-					<span>(<%= get_minutes_count_sum(@week3[1], @week3[2], @week3[3], @week3[4], @week3[5]) %> min)</span>
+					<span>(<%= (get_minutes_count_sum(@week3[1], @week3[2], @week3[3], @week3[4], @week3[5])) / 60.0 %> hrs)</span>
 				</td>
 			</tr>
 
@@ -160,7 +160,7 @@
 				<% end %>
 				<td class="totals-col"><%= get_case_count_sum(@week4[1], @week4[2], @week4[3], @week4[4], @week4[5]) %>
 					<br />
-					<span>(<%= get_minutes_count_sum(@week4[1], @week4[2], @week4[3], @week4[4], @week4[5]) %> min)</span>
+					<span>(<%= (get_minutes_count_sum(@week4[1], @week4[2], @week4[3], @week4[4], @week4[5])) / 60.0 %> hrs)</span>
 				</td>
 			</tr>
 
@@ -187,7 +187,7 @@
 				<% end %>
 				<td class="totals-col"><%= get_case_count_sum(@week5[1], @week5[2], @week5[3], @week5[4], @week5[5]) %>
 					<br />
-					<span>(<%= get_minutes_count_sum(@week5[1], @week5[2], @week5[3], @week5[4], @week5[5]) %> min)</span>
+					<span>(<%= (get_minutes_count_sum(@week5[1], @week5[2], @week5[3], @week5[4], @week5[5])) / 60.0 %> hrs)</span>
 				</td>
 			</tr>
 
@@ -214,7 +214,7 @@
 				<% end %>
 				<td class="totals-col"><%= get_case_count_sum(@week6[1], @week6[2], @week6[3], @week6[4], @week6[5]) %>
 					<br />
-					<span>(<%= get_minutes_count_sum(@week6[1], @week6[2], @week6[3], @week6[4], @week6[5]) %> min)</span>
+					<span>(<%= (get_minutes_count_sum(@week6[1], @week6[2], @week6[3], @week6[4], @week6[5])) / 60.0 %> hrs)</span>
 				</td>
 			</tr>
 
