--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,9 +17,11 @@
 	                		  Metrics <b class="caret"></b>
 	              			</a>
 	              			<ul class="dropdown-menu">
-	                			<li><%= link_to "Weekdays", metrics_weekdays_path %></li>
 	                			<li><%= link_to "Sundays", metrics_sundays_path %></li>
 				                <li><%= link_to "Monthly", metrics_monthly_path %></li>
+				                <% if current_user.admin %>
+				                	<li><%= link_to "By Rep", metrics_weekdays_path %></li>
+				                <% end %>
 				            </ul>
 			            </li>
 						<li><%= link_to "Customers", customers_path %></li>
