--- a/app/views/users/partials/_pricing_widget.html.erb
+++ b/app/views/users/partials/_pricing_widget.html.erb
@@ -1,7 +1,7 @@
 <div id="pricing">
 	<div class="pricing-wrapper">
 		<div id="edition">
-		    <h3 class="center">Edition</h3>
+		    <h3 class="center" style="color: white;">Edition</h3>
 		    <div class="pricing-btn" data-value="25">Essentials</div>
 		    <div class="pricing-btn" data-value="45">Standard</div>
 		    <div class="pricing-btn" data-value="60">Premium</div>
@@ -9,7 +9,7 @@
 		</div>
 
 		<div id="licenses">
-		    <h3 class="center">Licenses</h3>
+		    <h3 class="center" style="color: white;">Licenses</h3>
 		    <div class="pricing-btn left" data-value="1">1</div>
 		    <div class="pricing-btn right" data-value="5">5</div>
 		    <div class="pricing-btn left" data-value="2">2</div>
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 
-	<a href="#"><div id="calculate"><h3>Calculate</h3></div></a>
+	<a href="#"><div id="calculate"><h3 style="color: white;">Calculate</h3></div></a>
 
 	<a href="#"><div id="reset"><p>(reset)</p></div></a>
 
