--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,13 +22,9 @@ textarea {
 
 /* Spacing & Alignment */
 
-.clear {
-	clear: both;
-}
+.clear { clear: both; }
 
-.center {
-  text-align: center;
-}
+.center { text-align: center; }
 
 .float-right {
 	float: right;
