update dashboard for Dina

--- a/app/views/users/partials/_dashboard_widgets.html.erb
+++ b/app/views/users/partials/_dashboard_widgets.html.erb
@@ -21,7 +21,7 @@
 				<li> 818 - Betty</li>
 				<li> 819 - Angela</li>
 				<li> 820 - Jake</li>
-				<li> 822 - TJ</li>
+				<li> 822 - Dina</li>
 			</ul>
 		</div>
 	
