make metrics monthly clickable

--- a/app/assets/stylesheets/metrics.css.scss
+++ b/app/assets/stylesheets/metrics.css.scss
@@ -69,6 +69,9 @@
 		border-radius: 3px;
 		text-align: top;
 	}
+	a:hover {
+		text-decoration: none;
+	}
 	.totals-col {
 		border: none;
 		text-align: center;
